--- a/.github/workflows/Redmi_AX6-IPQ8071A.yml
+++ b/.github/workflows/Redmi_AX6-IPQ8071A.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: AX6-IPQ8071A
+name: Redmi_AX6-IPQ8071A
 
 on:
   repository_dispatch:
@@ -42,8 +42,8 @@ env:
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: AX6-IPQ8071A
-  PRODUCT_NAME: AX6-IPQ8071A
+  FILE_NAME: Redmi_AX6-IPQ8071A
+  PRODUCT_NAME: Redmi_AX6-IPQ8071A
 
 jobs:
   build:
@@ -184,13 +184,13 @@ jobs:
       uses: GitRML/delete-workflow-runs@main
       with:
         retain_days: 1
-        keep_minimum_runs: 6
+        keep_minimum_runs: 3
 
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@v0.1.0
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
-        keep_latest: 6
+        keep_latest: 3
         delete_tags: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
