--- a/.github/workflows/Redmi_AX3600.yml
+++ b/.github/workflows/Redmi_AX3600.yml
@@ -175,6 +175,8 @@ jobs:
           1、本固件为自动编译
           2、发行版中只提供完整的固件
           3、需要单独IPK请到分支下载
+          此版本是全能版本，也是自定义版本，涵盖所有插件，想要榨干路由器性能和内存的朋友可以尝试刷入。支持已刷WEB升级的openwrt固件，刷入方式：首选恢复出厂设置，然后再系统升级不保留配置刷入。全能版每天都会拉取最新源码更新
+          全能插件版： #OpenAppFilter #IPv6 #简单mesh #科学ssp（全组件） #smartdns #去广告plus—及—Adg广告拦截 #云音乐 #流控 #ttyd #zerotier #Turbo ACC #访客网络 #openclash #jd签到 #多拨&负载均衡#组播#等等！自行研究！
           当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           ${{ env.useVersionInfo }}
         artifacts: ${{ env.FIRMWARE }}/*
